--- a/src/config.json
+++ b/src/config.json
@@ -1,11 +1,11 @@
 {
-  "SITE": "https://flo-bit.dev",
-  "BASE": "/blog-template",
-  "SITE_TITLE": "Blog template",
-  "SITE_NAME": "blog template",
-  "SITE_DESCRIPTION": "Welcome to my website!",
-  "SITE_FAVICON": "🙃",
-  "NAME": "flo-bit",
+  "SITE": "https://tokerson.github.io/",
+  "BASE": "/personal-blog",
+  "SITE_TITLE": "Jakub Tokarzewski - Personal Blog",
+  "SITE_NAME": "Jakub Tokarzewski - Personal Blog",
+  "SITE_DESCRIPTION": "Welcome to my personal website! I'm Jakub Tokarzewski, a web developer with a passion for creating beautiful and functional websites. I'm always looking for new challenges and opportunities to grow as a developer. If you're interested in working with me, feel free to reach out to me through my contact information below. I'm excited to connect with you and discuss how I can help you create your next website!",
+  "SITE_FAVICON": "⌨",
+  "NAME": "Jakub Tokarzewski",
   "POSTS_PER_PAGE": 3,
   "MANUAL_DARK_MODE": true,
   "SEARCH_ENABLED": true,
@@ -13,13 +13,13 @@
   "ACCENT_COLOR": "rose",
   "SOCIAL_LINKS": {
     "FACEBOOK_URL": "",
-    "TWITTER_URL": "",
-    "GITHUB_URL": "https://github.com/flo-bit",
+    "TWITTER_URL": "https://x.com/JakubTokarzews2",
+    "GITHUB_URL": "https://github.com/tokerson/personal-blog",
     "INSTAGRAM_URL": "",
     "LINKEDIN_URL": "",
     "YOUTUBE_URL": "",
     "SUBSTACK_URL": "",
-    "EMAIL": "flo.bit.dev@gmail.com",
+    "EMAIL": "kuba.tokarzewski@gmail.com",
     "BLUESKY_URL": "https://bsky.app/profile/flo-bit.dev"
   },
   "BLUESKY_IDENTIFIER": "flo-bit.dev"
