--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "astro check && astro build && pagefind",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "oxlint"
   },
   "dependencies": {
-    "@ascorbic/bluesky-loader": "^0.0.3",
     "@astro-community/astro-embed-utils": "^0.1.3",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "@tailwindcss/typography": "^0.5.15",
+    "oxlint": "0.15.10",
     "pagefind": "^1.1.1",
     "vite-plugin-pagefind": "^0.2.10"
   },
