change base from "/" to ""

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "SITE": "https://tokarz.dev/",
-  "BASE": "/",
+  "BASE": "",
   "SITE_TITLE": "Jakub Tokarzewski - Personal Blog",
   "SITE_NAME": "Jakub Tokarzewski",
   "SITE_DESCRIPTION": "Welcome to my personal website! I'm Jakub Tokarzewski, a web developer with a passion for creating beautiful and functional websites. I'm always looking for new challenges and opportunities to grow as a developer. If you're interested in working with me, feel free to reach out to me through my contact information below. I'm excited to connect with you and discuss how I can help you create your next website!",
